Fix HTML encoding issues and improve structure

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         </div>
 
         <footer>
-            <p>BEEPSMOL &copy; 2026 | BUILT WITH STYLE</p>
+            <p>BEEPSMOL &copy; 2026</p>
         </footer>
     </div>
 
